--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,96 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_cupertino_localizations: ^1.0.1
 
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^1.0.2
+
+  # GetX
+  get: ^4.6.1
+
+  # 日期
+  intl: ^0.17.0
+
+  # 屏幕适配
+  flutter_screenutil: ^5.3.1
+
+  # 下拉刷新
+  pull_to_refresh: ^2.0.0
+
+  # toast
+  fluttertoast: ^8.0.9
+
+  # easyloading
+  flutter_easyloading: ^3.0.3
+
+  # http
+  dio: ^4.0.4
+  dio_cookie_manager: ^2.0.0
+  cookie_jar: ^3.0.1
+
+  # 缓存
+  shared_preferences: ^2.0.13
+  cached_network_image: ^3.2.0
+  flutter_cache_manager: ^3.3.0
+
+  # 加密安全 SHA
+  crypto: ^3.0.1
+
+  # webView
+  webview_flutter: ^4.0.0
+
+  # loading
+  loading_animations: ^2.2.0
+
+  # share
+  share: ^2.0.4
+
+  # 设备信息
+  device_info: ^2.0.3
+
+  # 包信息
+  package_info: ^2.0.2
+
+  # 路径查询
+  path_provider: ^2.0.9
+
+  # permission 权限
+  permission_handler: ^10.2.0
+
+  # 错误收集
+  sentry: ^6.3.0
+
+  # 通过 scheme 打开APP 获取 参数
+  uni_links: ^0.5.1
+
+  #动画库
+  flutter_spinkit: ^5.1.0
+  # 轮播图
+  flutter_swiper: ^1.1.6
+
+  dots_indicator: ^2.1.0
+
+  google_sign_in: ^5.3.3
+
+  firebase_core: ^2.4.0
+
+  firebase_messaging: ^14.1.4
+
+  firebase_in_app_messaging: ^0.7.0+8
+
+  firebase_auth: ^4.2.1
+
+  cloud_firestore: ^4.2.0
+
+  firebase_storage: ^11.0.8
+
+  location: ^4.4.0
+
+  image_picker: ^0.8.6
+
+  photo_view: ^0.14.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
