--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_screenutil: ^5.6.1
 
 dev_dependencies:
   flutter_test:
@@ -46,14 +47,14 @@ dev_dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  # GetX
+  # GetX -> State management()
   get: ^4.6.1
 
-  # 日期
+  # date
   intl: ^0.17.0
 
-  # 屏幕适配
-  flutter_screenutil: ^5.3.1
+  # device ui resizing
+  # flutter_screenutil: ^5.3.1
 
   # 下拉刷新
   pull_to_refresh: ^2.0.0
