--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,6 +25,9 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
+apply plugin: 'com.android.application'
+id 'com.google.gms.google-services'
+
 android {
     ///compileSdkVersion flutter.compileSdkVersion
     compileSdkVersion 33
@@ -72,5 +75,10 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    /**
+     * MARTIN ADDED.
+     */
     implementation 'com.android.support:multidex:1.0.3'
+    implementation platform('com.google.firebase:firebase-bom:31.2.2')
 }
