--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,12 @@ dev_dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  #firebase
+#  firebase_core: ^2.4.1
+#  firebase_auth: ^4.2.5
+#  cloud_firestore: ^4.3.1
+#  shared_preferences: ^2.0.16
+
   # GetX -> State management()
   get: ^4.6.1
 
