--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 apply plugin: 'com.android.application'
-id 'com.google.gms.google-services'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     ///compileSdkVersion flutter.compileSdkVersion
