--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -163,6 +163,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/ringtones/
     - assets/icons/
     - assets/images/
 
