--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_cupertino_localizations: ^1.0.1
+#  flutter_cupertino_localizations: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -114,23 +114,29 @@ dev_dependencies:
   #动画库
   flutter_spinkit: ^5.1.0
   # 轮播图
-  flutter_swiper: ^1.1.6
+#  flutter_swiper: ^1.1.6
 
   dots_indicator: ^2.1.0
 
-  google_sign_in: ^5.3.3
+  google_sign_in: ^6.1.3
 
-  firebase_core: ^2.4.0
+  firebase_core: ^2.13.1
 
-  firebase_messaging: ^14.1.4
 
-  firebase_in_app_messaging: ^0.7.0+8
+  firebase_messaging: ^14.6.2
 
-  firebase_auth: ^4.2.1
 
-  cloud_firestore: ^4.2.0
+  firebase_in_app_messaging: ^0.7.3+2
 
-  firebase_storage: ^11.0.8
+
+  firebase_auth: ^4.6.2
+
+
+  cloud_firestore: ^4.8.0
+
+
+  firebase_storage: ^11.2.2
+
 
   location: ^4.4.0
 
